coloquei uma cor no footer e na nav, apaguei o about que tava usnado para teste

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -5,9 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /**
-  background-color: aquamarine;
-  **/
+ background-color: #23272A !important;
 }
 
 code {
