--- a/src/css/App.css
+++ b/src/css/App.css
@@ -5,6 +5,7 @@
 
 .App {
   text-align: center;
+  background-color: #23272A;
 }
 
 .App-logo {
@@ -19,7 +20,6 @@
 }
 
 .App-header {
-  
   min-height: 100vh;
   display: flex;
   flex-direction: column;
