--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -2,7 +2,7 @@
     position: fixed;
     bottom: 0;
     width: 100%;
-    background-color: #f8f8f8; /* Cor de fundo (opcional) */
+    background-color: #7289DA; /* Cor de fundo (opcional) */
     /* Outros estilos do footer */
   }
   
