--- a/src/css/index.css
+++ b/src/css/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
- background-color: #23272A !important;
+  background-color: #23272a !important;
 }
 
 code {
