--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -3,5 +3,12 @@
   bottom: 0;
   width: 100%;
   background-color: #7289DA;
-  
+
+
+
+}
+
+.footer h1 {
+  font-weight: normal;
+  font-size: 16px;
 }
