descrição adicionada, coloquei um background, mudei as cores

--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -2,10 +2,7 @@
   position: fixed;
   bottom: 0;
   width: 100%;
-  background-color: #7289DA;
-
-
-
+  background-color: #F67F00;
 }
 
 .footer h1 {
