--- a/src/css/App.css
+++ b/src/css/App.css
@@ -5,7 +5,7 @@
 
 .App {
   text-align: center;
-  background-color: #23272A;
+  background-color: #FCBF4A;
 }
 
 .App-logo {
@@ -42,3 +42,4 @@
     transform: rotate(360deg);
   }
 }
+
