--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+CL:wght@100..400&display=swap');
+
 .navbar {
     text-align: left;
     position: fixed;
@@ -5,5 +7,13 @@
     left: 0;
     right: 0;
     z-index: 100;
-    background-color: #7289DA;
+    background-color: #F67F00;
 }
+/*
+h1 {
+    font-family: "Playwrite CL", cursive;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+}
+    */
