--- a/src/css/index.css
+++ b/src/css/index.css
@@ -4,8 +4,8 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: #23272a !important;
+  -moz-osx-font-smoothing: grayscale;  
+  background-color: #FCBF4A !important;
 }
 
 code {
