--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -4,11 +4,15 @@
     text-align: left;
     padding-left: 40px ;
     display: flex;
-    width: 90%;
+    width: 100%;
     z-index: 100;
     background-color: #F67F00;
 }
-
+@media screen and (max-width: 768px){
+    .navbar{
+        width: 90.5%;
+    }
+}
 
 /*
 h1 {
